2008-11-07  Mario Blättermann  <mariobl@svn.gnome.org>

	* docs/Makefile.am: Added de to DOC_LINGUAS 
	* docs/de/de.po: Added German translation
	* docs/de/figures/*: Added screenshots

2008-10-09  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c:
	* stickynotes_applet_callbacks.c:
	* stickynotes_applet.[ch]: Patch from Josselin Mouette to hide the
	stickynotes when the applet button is pressed. See bug 505475.

2008-09-30  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am (install-data-local): Remove the use of the
	--shutdown option when installing the gconf data. Reported by Remi
	Cardona in bug 554311.

2008-09-26  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.ui: 
	* stickynotes.glade: Set the page_size to 0 to work around recent
	gtk sensitivity.

==================== 2.24.0.1 ====================

2008-08-20  Philipp Kerling  <k.philipp@gmail.com>

	* Makefile.am: Change mistyped "(DESTDIR)" to "$(DESTDIR)". Partially
	fixes bug #547647.

2008-06-29  Gil Forcada  <gforcada@gnome.org>

	* docs/ca/ca.po: Minor fixes to Catalan translation.

2008-05-09  Jonh Wendell  <jwendell@gnome.org>

	* docs/Makefile.am, 
	* docs/pt_BR/: Brazilian Portuguese translation by Amadeu Barbosa.

2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes/stickynotes.glade
	* stickynotes/stickynotes.ui
	* stickynotes/stickynotes_callbacks.c
	* stickynotes/stickynotes.c
	* stickynotes/stickynotes_applet_callbacks.c
	* stickynotes/stickynotes_callbacks.h
	* stickynotes/stickynotes_applet.c
	* stickynotes/stickynotes.h
	* stickynotes/Makefile.am
	* stickynotes/stickynotes_applet.h: Convert from glade to
	gtk-builder. Patch from Jaap Haitsma (bug #521082).

2008-03-12  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes_applet_callbacks.c (menu_about_cb): Use the correct