@@ -1,3 +1,12 @@
+2008-11-09  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.h: 
+	* stickynotes.c:
+	* stickynotes_applet.c:	
+	* stickynotes_applet_callbacks.c: Reduce I/O by batching
+	configuration saves. They now occur every minutes (if necessary)
+	and at applet deletion time. See bug 458902.
+
 2008-11-07  Mario Blättermann  <mariobl@svn.gnome.org>
 
 	* docs/Makefile.am: Added de to DOC_LINGUAS 
